unpackaged/main/default/objects/ProgramApi__Program_Profile__c/ProgramApi__Program_Profile__c.object-meta.xml
<CustomObject>
    <description>This object maintains a single persona for each participant in a given program.</description>
    <label>Program Profile</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Program Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>