unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Allowed_Credits__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Credits__c</fullName>
    <label>Allowed Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>