unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Allowed_Workshops__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Workshops__c</fullName>
    <label>Allowed Workshops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>