unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Current_Program_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Program Term</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProgramApi__Program_Term__c.ProgramApi__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProgramApi__Program_Term__c</referenceTo>
    <relationshipLabel>Program Profiles</relationshipLabel>
    <relationshipName>Program_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>