unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Days_left_until_recertification__c.field-meta.xml
<CustomField>
    <fullName>Days_left_until_recertification__c</fullName>
    <formula>FON_Program_End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days left until recertification</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>