unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Directory_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Directory_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directory Opt-out</label>
    <type>Checkbox</type>
</CustomField>