unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Audit_Date__c</fullName>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>