unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>FON_Audit_Status__c</fullName>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined With Comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>