unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Audit_Submitted_Date_By_EU__c.field-meta.xml
<CustomField>
    <fullName>FON_Audit_Submitted_Date_By_EU__c</fullName>
    <label>Audit Submitted Date By EU</label>
    <type>DateTime</type>
</CustomField>