unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Audited__c.field-meta.xml
<CustomField>
    <fullName>FON_Audited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audited</label>
    <type>Checkbox</type>
</CustomField>