unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Audited_By__c.field-meta.xml
<CustomField>
    <fullName>FON_Audited_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>