unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Audited_Year__c.field-meta.xml
<CustomField>
    <fullName>FON_Audited_Year__c</fullName>
    <label>Audited Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>