unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Exam_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Exam_Completion_Date__c</fullName>
    <label>Exam Completion Date</label>
    <type>Date</type>
</CustomField>