unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Exam_Results__c.field-meta.xml
<CustomField>
    <fullName>FON_Exam_Results__c</fullName>
    <inlineHelpText>System generated. Information coming from the Attendee record.</inlineHelpText>
    <label>Exam Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>