unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_NCP_Directory_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_NCP_Directory_Name__c</fullName>
    <label>NCP Directory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>