unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Program_End_Date__c</fullName>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>