unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_Program_Name__c</fullName>
    <formula>ProgramApi__Program__r.ProgramApi__Progam_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FON Program Name</label>
    <type>Text</type>
</CustomField>