unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Remaining_Credits_Required_Pending__c.field-meta.xml
<CustomField>
    <fullName>FON_Remaining_Credits_Required_Pending__c</fullName>
    <label>Remaining Credits Required - Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>