unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Remaining_Credits_Required_Processed__c.field-meta.xml
<CustomField>
    <fullName>FON_Remaining_Credits_Required_Processed__c</fullName>
    <label>Remaining Credits Required - Processed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>