unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Start_Month_Day__c.field-meta.xml
<CustomField>
    <fullName>FON_Start_Month_Day__c</fullName>
    <formula>TEXT(MONTH(FON_Program_Start_Date__c)) &amp; &#39;/&#39; &amp; TEXT(DAY(FON_Program_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Month / Day</label>
    <type>Text</type>
</CustomField>