unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Credits__c</fullName>
    <label>Total Credits (Full)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>