unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Total_Credits_LIMIT__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Credits_LIMIT__c</fullName>
    <formula>IF(FON_Total_Credits__c &gt; Allowed_Credits__c,Allowed_Credits__c,FON_Total_Credits__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>