unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Total_Terms__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Terms__c</fullName>
    <label>Total Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>