unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Total_Workshops__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Workshops__c</fullName>
    <label>Total Workshops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>