unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/FON_Trainer_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_Trainer_Name__c</fullName>
    <label>Trainer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>