unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Honorary_NCP__c.field-meta.xml
<CustomField>
    <fullName>Honorary_NCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Honorary NCP</label>
    <type>Checkbox</type>
</CustomField>