unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Honorary_Year__c.field-meta.xml
<CustomField>
    <fullName>Honorary_Year__c</fullName>
    <label>Honorary Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>