unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>is_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Duplicate</label>
    <type>Checkbox</type>
</CustomField>