unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Legacy_Program_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Program_Profile_Id__c</fullName>
    <label>Legacy Program Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>