unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/NCP_Directory_Contact__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_Contact__c</fullName>
    <formula>ProgramApi__Contact__r.FirstName&amp;&#39; &#39;&amp;ProgramApi__Contact__r.LastName&amp;&#39; &#39;&amp;
IF( Honorary_NCP__c == true, &#39;&lt;span class=&quot;slds-badge slds-theme_success&quot;&gt;&#39;&amp; Honorary_Year__c &amp;&#39; Honorary &lt;/span&gt;&#39;,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>