unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/NCP_Directory_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_Display_Name__c</fullName>
    <formula>ProgramApi__Contact__r.FON_NCP_Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This may be edited in the contact record</inlineHelpText>
    <label>NCP Directory Display Name</label>
    <type>Text</type>
</CustomField>