unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/NCP_Directory_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_Opt_Out__c</fullName>
    <formula>ProgramApi__Contact__r.NCP_Directory_Opt_Out__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This may be edited in the contact record</inlineHelpText>
    <label>NCP Directory Opt Out</label>
    <type>Checkbox</type>
</CustomField>