unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/NCP_Directory_Organization__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_Organization__c</fullName>
    <formula>ProgramApi__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization</label>
    <type>Text</type>
</CustomField>