unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/NCP_Directory_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_Organization_Name__c</fullName>
    <formula>ProgramApi__Contact__r.Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This value displays in the live directory. It is fed from the Contact Record.</inlineHelpText>
    <label>NCP Directory Organization Name</label>
    <type>Text</type>
</CustomField>