unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/NCP_Directory_State__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_State__c</fullName>
    <formula>TEXT(ProgramApi__Contact__r.MailingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fed from Contact Record</inlineHelpText>
    <label>State</label>
    <type>Text</type>
</CustomField>