unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/NCP_Directory_Year__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_Year__c</fullName>
    <formula>TEXT(YEAR( FON_Exam_Completion_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>