unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Old_Program_Profile__c.field-meta.xml
<CustomField>
    <fullName>Old_Program_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Program Profile</label>
    <referenceTo>ProgramApi__Program_Profile__c</referenceTo>
    <relationshipLabel>Program Profiles</relationshipLabel>
    <relationshipName>Program_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>