unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/PP_Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>PP_Candidate_ID__c</fullName>
    <formula>ProgramApi__Contact__r.FON_NCP_Candidate_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate ID</label>
    <type>Text</type>
</CustomField>