unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Account__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies Account to a program profile when program entity is Account; an Account has only one profile for a program</description>
    <inlineHelpText>Identifies Account to a program profile when program entity is Account; an Account has only one profile for a program</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Profiles</relationshipLabel>
    <relationshipName>Program_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>