unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Completion_Date__c</fullName>
    <description>(optional) Date completed Program; when populated, published on Program Profile</description>
    <inlineHelpText>(optional) Date completed Program; when populated, published on Program Profile</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>