unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies Contact to program profile; a Contact has only one profile for a program</description>
    <inlineHelpText>Identifies Contact to program profile; a Contact has only one profile for a program</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Profiles</relationshipLabel>
    <relationshipName>Program_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>