unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Create_Maintenance_Term__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Create_Maintenance_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SYSTEM field; when enabled and record saved, creates new term and goals related to program maintenance requirements</description>
    <inlineHelpText>SYSTEM field; when enabled and record saved, creates new term and goals related to program maintenance requirements</inlineHelpText>
    <label>Create Maintenance Term</label>
    <type>Checkbox</type>
</CustomField>