unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Custom_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Custom_Link_URL__c</fullName>
    <description>When populated this field provides a button/url to the profile.</description>
    <inlineHelpText>When populated this field provides a button/url to the profile.</inlineHelpText>
    <label>Custom Link URL</label>
    <type>Url</type>
</CustomField>