unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Hide_Program_Profile__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Hide_Program_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will hide the program profile from the programs page.</description>
    <inlineHelpText>Checking this field will hide the program profile from the programs page.</inlineHelpText>
    <label>Hide Program Profile</label>
    <type>Checkbox</type>
</CustomField>