unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Name__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Name__c</fullName>
    <description>Identifies participant&#39;s name as it will appear on reports (e.g. certificates)</description>
    <inlineHelpText>Identifies participant&#39;s name as it will appear on reports (e.g. certificates)</inlineHelpText>
    <label>Certificant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>