unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Program__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies Program related to a program profile</description>
    <inlineHelpText>Identifies Program related to a program profile</inlineHelpText>
    <label>Program</label>
    <referenceTo>ProgramApi__Program__c</referenceTo>
    <relationshipLabel>Program Profiles</relationshipLabel>
    <relationshipName>Program_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>