unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__SalesOrderLineId__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__SalesOrderLineId__c</fullName>
    <description>System field to process the sales order line.</description>
    <inlineHelpText>System field to process the sales order line.</inlineHelpText>
    <label>SalesOrderLineId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>