unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/ProgramApi__Status__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Status__c</fullName>
    <description>Identifies the participants program status; Maintenance identifies participants successfully completed program and have an active program term</description>
    <inlineHelpText>Identifies the participants program status; Maintenance identifies participants successfully completed program and have an active program term</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Cautionary</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending Revocation</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>