unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Registration_Origin__c.field-meta.xml
<CustomField>
    <fullName>Registration_Origin__c</fullName>
    <label>Registration Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Registrant</fullName>
                <default>true</default>
                <label>New Registrant</label>
            </value>
            <value>
                <fullName>Retake</fullName>
            </value>
            <value>
                <fullName>Transfer In (from a different year)</fullName>
            </value>
            <value>
                <fullName>Transfer In (from a different person)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>