unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Registration_Termination__c.field-meta.xml
<CustomField>
    <fullName>Registration_Termination__c</fullName>
    <label>Registration Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferred to another year</fullName>
            </value>
            <value>
                <fullName>Transferred to another person</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>