unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Remaining_Credits__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credits__c</fullName>
    <formula>Allowed_Credits__c - FON_Total_Credits_LIMIT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>