unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Remaining_Workshops__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Workshops__c</fullName>
    <formula>Allowed_Workshops__c -  FON_Total_Workshops__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Workshops</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>