unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Remaining_Workshops_Required_Pending__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Workshops_Required_Pending__c</fullName>
    <label>Remaining Workshops Required - Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>