unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Renewed_on_New_Year__c.field-meta.xml
<CustomField>
    <fullName>Renewed_on_New_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewed on New Year</label>
    <type>Checkbox</type>
</CustomField>