unpackaged/main/default/objects/ProgramApi__Program_Profile__c/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <formula>ProgramApi__Contact__r.Retired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fed from Contact Record</inlineHelpText>
    <label>Retired</label>
    <type>Checkbox</type>
</CustomField>