unpackaged/main/default/objects/ProgramApi__Program_Profile__c/validationRules/ProgramApi__ValidateCreateOnlyOneTerm.validationRule-meta.xml
<ValidationRule>
    <fullName>ProgramApi__ValidateCreateOnlyOneTerm</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ProgramApi__Create_Candidate_Term__c = TRUE , ProgramApi__Create_Maintenance_Term__c = TRUE )</errorConditionFormula>
    <errorMessage>Please select only one: &quot;Create Candidate Term&quot; or &quot;Create Maintenance Term&quot;</errorMessage>
</ValidationRule>