unpackaged/main/default/objects/ProgramApi__Program_Profile__c/validationRules/Should_Not_Exceed_50.validationRule-meta.xml
<ValidationRule>
    <fullName>Should_Not_Exceed_50</fullName>
    <active>false</active>
    <errorConditionFormula>FON_Total_Credits__c &gt; Allowed_Credits__c</errorConditionFormula>
    <errorDisplayField>FON_Total_Credits__c</errorDisplayField>
    <errorMessage>Approved credits cannot exceed the Allowed Credits</errorMessage>
</ValidationRule>