unpackaged/main/default/objects/ProgramApi__Program_Profile__c/listViews/Audited.listView-meta.xml
<ListView>
    <fullName>Audited</fullName>
    <columns>NAME</columns>
    <columns>ProgramApi__Contact__c</columns>
    <columns>FON_Audited__c</columns>
    <columns>FON_Audit_Date__c</columns>
    <columns>PP_Candidate_ID__c</columns>
    <columns>FON_Program_Start_Date__c</columns>
    <columns>FON_Program_End_Date__c</columns>
    <columns>FON_Total_Workshops__c</columns>
    <columns>FON_Total_Credits__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FON_Audited__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FON_Audit_Date__c</field>
        <operation>notEqual</operation>
        <value>8/26/2021</value>
    </filters>
    <label>Audited before 8/26/2021</label>
</ListView>