unpackaged/main/default/objects/ProgramApi__Program_Profile__c/listViews/Audited_Year_2024.listView-meta.xml
<ListView>
    <fullName>Audited_Year_2024</fullName>
    <columns>NAME</columns>
    <columns>ProgramApi__Account__c</columns>
    <columns>ProgramApi__Contact__c</columns>
    <columns>FON_Exam_Results__c</columns>
    <columns>ProgramApi__Status__c</columns>
    <columns>Registration_Origin__c</columns>
    <columns>Registration_Termination__c</columns>
    <columns>FON_Audited_Year__c</columns>
    <columns>FON_Audit_Status__c</columns>
    <columns>FON_Program_Start_Date__c</columns>
    <columns>FON_Program_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FON_Audited_Year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <label>Audited Year 2024</label>
</ListView>