unpackaged/main/default/objects/ProgramApi__Program_Profile__c/listViews/Audited_YTD.listView-meta.xml
<ListView>
    <fullName>Audited_YTD</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>8/27/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>UPDATEDBY_USER</field>
        <operation>equals</operation>
        <value>Tanya Renne</value>
    </filters>
    <label>Audited YTD</label>
</ListView>