unpackaged/main/default/objects/ProgramApi__Program_Profile__c/listViews/Current_NCPs.listView-meta.xml
<ListView>
    <fullName>Current_NCPs</fullName>
    <columns>NAME</columns>
    <columns>ProgramApi__Account__c</columns>
    <columns>ProgramApi__Contact__c</columns>
    <columns>ProgramApi__Status__c</columns>
    <columns>FON_NCP_Directory_Name__c</columns>
    <columns>Allowed_Credits__c</columns>
    <columns>Allowed_Workshops__c</columns>
    <columns>FON_Remaining_Credits_Required_Pending__c</columns>
    <columns>FON_Remaining_Credits_Required_Processed__c</columns>
    <columns>Remaining_Workshops_Required_Pending__c</columns>
    <columns>Remaining_Workshops_Required_Processed__c</columns>
    <columns>FON_Total_Credits__c</columns>
    <columns>FON_Total_Workshops__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProgramApi__Status__c</field>
        <operation>equals</operation>
        <value>On Track,Completed,Pending Revocation,Exempt</value>
    </filters>
    <label>Current NCPs</label>
</ListView>