unpackaged/main/default/objects/ProgramApi__Program_Profile__c/listViews/Not_Audited.listView-meta.xml
<ListView>
    <fullName>Not_Audited</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FON_Audited__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Not Audited</label>
    <language>en_US</language>
</ListView>