unpackaged/main/default/objects/ProgramApi__Program_Profile__c/listViews/ProgramApi__All.listView-meta.xml
<ListView>
    <fullName>ProgramApi__All</fullName>
    <columns>NAME</columns>
    <columns>ProgramApi__Account__c</columns>
    <columns>ProgramApi__Contact__c</columns>
    <columns>FON_Exam_Results__c</columns>
    <columns>ProgramApi__Status__c</columns>
    <columns>Registration_Origin__c</columns>
    <columns>Registration_Termination__c</columns>
    <columns>FON_Audited_Year__c</columns>
    <columns>FON_Audit_Status__c</columns>
    <columns>FON_Program_Start_Date__c</columns>
    <columns>FON_Program_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>